<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/listbg0"
    tools:context=".AboutPage">

    <!-- Footer aligned to bottom -->

    <ScrollView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- switch to expanded table view OUT -->

            <Button
                android:id="@+id/view_in_all"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClick"
                android:padding="20dp"
                android:text="@string/in" />

            <!-- switch to IN mini view -->

            <Button
                android:id="@+id/view_out_all"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClick"
                android:padding="20dp"
                android:text="@string/out" />

            <Button
                android:id="@+id/delete_but"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClick"
                android:padding="20dp"
                android:visibility="gone"
                android:text="@string/del" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:padding="5dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/ab_tv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_2"
                android:textColor="#ff000000" />

            <TextView
                android:id="@+id/ab_tv_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_3"
                android:textColor="#ff000000" />

            <TextView
                android:id="@+id/ab_tv_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_4"
                android:textColor="#ff000000" />

            <TextView
                android:id="@+id/ab_tv_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_5"
                android:textColor="#ff000000" />

            <TextView
                android:id="@+id/ab_tv_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_6"
                android:textColor="#ff000000" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>