<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/listbg0">

    <!--
            Out Values

    Footer aligned to bottom -->

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Switch to mini view OUT table -->

            <Button
                android:id="@+id/min_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClick"
                android:padding="20dp"
                android:text="@string/minus" />

            <!-- Switch to IN table view -->

            <Button
                android:id="@+id/in_table_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClick"
                android:padding="20dp"
                android:text="@string/in_tabl" />

            <!-- Switch to OUT averages -->

            <Button
                android:id="@+id/out_averages_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClick"
                android:padding="20dp"
                android:text="@string/averages" />

            <!-- Switch to Date picker add values -->

            <Button
                android:id="@+id/add_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClick"
                android:padding="20dp"
                android:text="@string/add" />

            <Button
                android:id="@+id/numbers_btn_out"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClick"
                android:padding="20dp"
                android:text="@string/num" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_top_oo"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/note"
                    android:textColor="#ff000000"></TextView>

                <TextView
                    android:id="@+id/tvSQLinfoOut_notes"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_info"
                    android:textColor="#ff000000"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/value"
                    android:textColor="#ff000000"></TextView>

                <TextView
                    android:id="@+id/tvSQLinfoOut_values"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_info"
                    android:textColor="#ff000000"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:textColor="#ff000000"></TextView>

                <TextView
                    android:id="@+id/tvSQLinfoOut_dates"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_info"
                    android:textColor="#ff000000"></TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>