<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/listbg0"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/enter_cal"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="OnClick"
                android:text="@string/enter_vals" />

            <LinearLayout
                android:id="@+id/secret_footer_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/secret_footer_middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/secret_button_ssshhhhh_whisper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Hello"
                        android:padding="20dp"
                        android:visibility="visible" />

                </LinearLayout>


            </LinearLayout>


            <Button
                android:id="@+id/graph_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="OnClick"
                android:text="@string/graph" />

            <Button
                android:id="@+id/view_in"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="OnClick"
                android:text="@string/in_table" />

            <Button
                android:id="@+id/view_out"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="OnClick"
                android:text="@string/out_table" />

            <Button
                android:id="@+id/linear_table"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="OnClick"
                android:text="@string/linear_table" />

            <Button
                android:id="@+id/hour_glass"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="OnClick"
                android:text="@string/hourglass"
                android:visibility="gone" />

            <Button
                android:id="@+id/manage_notes"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="OnClick"
                android:text="@string/manage" />

            <Button
                android:id="@+id/about_page"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="OnClick"
                android:text="@string/about" />


        </LinearLayout>


    </LinearLayout>
</ScrollView>
